non-blink browser (safari, firefox) doens't handle offscreen canvas as expected, or not at all. Disable PixOp / Spotlight usage on those browser. See also issue #344

--- a/app/src/css/mx_base.css
+++ b/app/src/css/mx_base.css
@@ -649,6 +649,12 @@ tr {
   pointer-events: none;
 }
 
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .btn.disabled-with-events,
 .btn-circle.disabled-with-events {
   cursor: not-allowed;
